downloaded more tailwind styles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Travel and tour Booking home page</title>
         <link href="./css/output.css" rel="stylesheet">
     </head>
-    <body class="flex items-center justify-center min-h-screen bg-orange-900">
-        <h1 class="text-3xl font-bold underline">
-            Hello world!
-        </h1>
+    <body>
+        <!-- gallery section -->
+        <section>
+            <div class="grid grid-cols-5">
+                <div>
+                    <img src="rogue-attack.gif" alt class="absolute">
+                    <div class="relative top-20 left-1 bg-blac text-amber-500">Northwest</div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+                <div>
+                    <img src="rogue-attack.gif" alt>
+                    <div></div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
