Add call to action section to homepage and clean up unused CSS styles

--- a/index.html
+++ b/index.html
@@ -355,5 +355,9 @@
 
                 </div>
             </section>
+            <!-- Call to action section -->
+             <section>
+                
+             </section>
         </body>
     </html>
