Update background images and enhance layout in tour design and destination pagesed footer bg to white

--- a/tour design.html
+++ b/tour design.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body  class="bg-sky-100">
-    <section class="bg-[url(background.svg)] w-full h-48 bg-cover bg-no-repeat">
+    <section class="bg-[url('/background.svg')] bg-center bg-blend-darken w-full h-150 bg-cover bg-no-repeat">
      <nav class="flex items-center justify-between">
     <div class="ml-6">
     <span class="text-3xl">Take-off</span>
@@ -22,6 +22,10 @@
         <button class="bg-green-600 hover:bg-green-400 w-28 h-10 " >sign in</button>
          </div>
      </nav>
+     <div class="absolute text-black flex flex-col my-50  justify-center w-full items-center text-center px-4">
+                    <h2 class="text-3xl md:text-5xl font-bold">Where Plans <span class="text-blue-400">Take Off</span></h2>
+                    <p class="mt-4 max-w-2xl">Gorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                </div>
         </section>
         <div class="text-center mb-10">
          <h1 class="font-bold ml-24 text-2xl ">Explore All Destination</h1>
@@ -212,7 +216,7 @@
             
 
         
-    <footer class="grid grid-flow-col grid-row-4 gap-4 font-light mt-32 ml-20">
+    <footer class="grid grid-flow-col grid-row-4 bg-white gap-4 font-light mt-32 pl-20">
              <div>
                 <h1 class="font-bold ml-4">Follow us</h1>
                 <i class="fa-brands fa-facebook"></i>
