Add tour details and images for various attractions in Cameroon
- Introduced a new JavaScript file (blaise.js) containing an array of tour objects.
- Each tour includes details such as title, destination, description, price, ratings, itinerary, inclusions, duration, and images.
- Added tours for Menchum Falls, Lamido Palace, Foumban Royal Palace, and Kribi Beaches.
- Commented out additional tours for Lobe Waterfalls and Dja Faunal Reserve for future reference.
- Included image paths for each tour to enhance visual representation.

--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
                 <div id="carousel"
                     class="flex transition-transform duration-500 ease-in-out">
 
-                    <!-- Card Template (repeated) -->
-                    <div
+                    <!-- Carousel Items -->
+                     <!--    <div
                         class="min-w-[90%] sm:min-w-[48%] lg:min-w-[32%] bg-white rounded-xl shadow-md overflow-hidden mx-2">
                         <img class="h-48 w-full object-cover"
                             src="/images/Lamido-palace.jpg" alt>
                         <div class="p-4">
                             <h3 class="font-semibold text-lg"> Lamido
                                 palace</h3>
-                            <!-- Location -->
+                             Location --
                             <div
                                 class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon -->
+                                <!-- Location Icon --
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                     class="w-4 h-4 mr-1 text-yellow-500"
                                     fill="currentColor"
@@ -212,10 +212,10 @@
                         <div class="p-4">
                             <h3 class="font-semibold text-lg">Foumban
                                 palace</h3>
-                            <!-- Location -->
+                            <!-- Location --
                             <div
                                 class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon -->
+                                <!-- Location Icon --
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                     class="w-4 h-4 mr-1 text-yellow-500"
                                     fill="currentColor"
@@ -255,10 +255,10 @@
                         <div class="p-4">
                             <h3 class="font-semibold text-lg">Reunification
                                 Monument</h3>
-                            <!-- Location -->
+                            <!-- Location --
                             <div
                                 class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon -->
+                                <!-- Location Icon --
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                     class="w-4 h-4 mr-1 text-yellow-500"
                                     fill="currentColor"
@@ -297,10 +297,10 @@
                             alt>
                         <div class="p-4">
                             <h3 class="font-semibold text-lg">Menchum-falls</h3>
-                            <!-- Location -->
+                            <!-- Location --
                             <div
                                 class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon -->
+                                <!-- Location Icon --
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                     class="w-4 h-4 mr-1 text-yellow-500"
                                     fill="currentColor"
@@ -330,7 +330,8 @@
                                 </a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+
 
                 </div>
 
@@ -434,8 +435,8 @@
                 </div>
             </div>
         </section>
-
-        <script src="/scripts/utils.js">
-  </script>
+        <!-- <script src="/scripts/blaise.js"></script> -->
+        <script src="/scripts/utils.js"></script>
+      
     </body>
 </html>
