Fix form display issue and remove redundant itinerary and gallery sections

--- a/Tour and destination.html
+++ b/Tour and destination.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-start-2 w-full">
                     <button class="bookbtn relative z-6 px-5 hover:bg-teal-600 py-1 ease-in-out hover:scale-110 transition-all duration-500 bg-teal-500 hover:cursor-pointer rounded-full bg">Book Now</button>
-                    <form action="#" class="bg-gray-300 transition-all ease-in-out duration-100 hidden relative bottom-0 w-80   p-2 text-black group-active:flex flex-col justify-center
+                    <form action="#" class="bg-gray-300 transition-all ease-in-out duration-100 hidden relative bottom-0 w-80   p-2 text-black group-active:flex flex-col justify-center">
                 <div class="group col-start-2 w-full">
                     <button class="px-5 py-1 bg-teal-500 rounded-full bg">Book
                         Now</button>
@@ -138,50 +138,5 @@
         document.querySelector('.closebtn').addEventListener('click',()=> closeTour())
         
         </script>
-
-        <section id="grid itinerary">
-            <h1 class="font-bold text-2xl">Itinerary</h1>
-            <div class="flex flex-col gap-2">
-                <div>
-                    <h1 class="font-medium text-sm p-0 m-0">day1: Arrival in
-                        Manaus and Amazon River Cruise</h1>
-                    <span class="text-red-500 ml-5 text-xs p-0 m-0">Arive in
-                        manaus tranfere your river riviver
-                        cruise, and enjoy a scenic journey the amazon river
-                    </span>
-                </div>
-                <div>
-                    <h1 class="font-medium text-sm p-0 m-0">day1: Arrival in
-                        Manaus and Amazon River Cruise</h1>
-                    <span class="text-red-500 ml-5 text-xs p-0 m-0">Arive in
-                        manaus tranfere your river riviver
-                        cruise, and enjoy a scenic journey the amazon river
-                    </span>
-                </div>
-                <div>
-                    <h1 class="font-medium text-sm p-0 m-0">day1: Arrival in
-                        Manaus and Amazon River Cruise</h1>
-                    <span class="text-red-500 ml-5 text-xs p-0 m-0">Arive in
-                        manaus tranfere your river riviver
-                        cruise, and enjoy a scenic journey the amazon river
-                    </span>
-                </div>
-
-            </div>
-        </section>
-        <section class="galery flex flex-col gap-5">
-            <h1 class="font-bold text-3xl text-left">Galery</h1>
-            <div
-                class="grid w-3/4 gap-15 mx-auto  grid-cols-[repeat(auto-fit,minmax(220px,1fr))] gap-4">
-                <img src="./images//sample1.svg" alt>
-                <img src="./images//sample1.svg" alt>
-                <img src="./images//sample1.svg" alt>
-                <img src="./images//sample1.svg" alt>
-                <img src="./images//sample1.svg" alt>
-                <img src="./images//sample1.svg" alt>
-                <img src="./images//sample1.svg" alt>
-                <img src="./images//sample1.svg" alt>
-            </div>
-        </section>
     </body>
 </html>
