inserting footer to all pages from js

--- a/Tour and destination.html
+++ b/Tour and destination.html
@@ -122,6 +122,9 @@
                 </div>
             </section>
         </main>
+        <footer id="footer">
+            
+        </footer>
         <script src="./scripts/chris.js"></script>
         <script>
           let formElem =  document.querySelector('form')
