--- a/index.html
+++ b/index.html
@@ -522,8 +522,9 @@
                     </div>
                 </div>
             </section>
+            <footer id="footer"></footer>
             <!-- <script src="/scripts/blaise.js"></script> -->
             <script src="/scripts/utils.js"></script>
-
+            <script src="./scripts/chris.js"></script>
         </body>
     </html>
