--- a/my trips.html
+++ b/my trips.html
@@ -121,7 +121,10 @@
     </div>
   </div>
 
+  <footer id="footer"></footer>
+
   <!-- JavaScript -->
+   <script src="./scripts/chris.js"></script>
   <script>
     let selectedTrip = null;
     let selectedRating = 0;
