created the function to render tour cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
     <body class="bg-sky-100  min-h-screen">
         <header
-            class="relative h-screen bg-[url('/images/hero.png')] bg-cover bg-center ">
+            class="header relative h-screen bg-[url('/images/hero.png')] bg-cover bg-center ">
+            <!-- navbar -->
+
             <!-- Hero Content -->
             <div
                 class="absolute inset-0 flex flex-col justify-center items-center text-center text-white px-4">
@@ -93,6 +95,7 @@
                 </div>
 
             </header>
+
             <!-- gallery section -->
             <section class="my-10 mx-8">
                 <div>
@@ -248,175 +251,6 @@
                         class="flex transition-transform duration-500 ease-in-out">
 
                         <!-- Carousel Items -->
-                        <!--    <div
-                        class="min-w-[90%] sm:min-w-[48%] lg:min-w-[32%] bg-white rounded-xl shadow-md overflow-hidden mx-2">
-                        <img class="h-48 w-full object-cover"
-                            src="/images/Lamido-palace.jpg" alt>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg"> Lamido
-                                palace</h3>
-                             Location --
-                            <div
-                                class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon --
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                    class="w-4 h-4 mr-1 text-yellow-500"
-                                    fill="currentColor"
-                                    viewBox="0 0 20 20">
-                                    <path fill-rule="evenodd"
-                                        d="M5.05 3.05a7 7 0 019.9 9.9L10 18.9l-4.95-5.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                Adamawa, Village
-                            </div>
-                            <div class="flex items-center my-2">
-                                <span class="text-yellow-400">★★★★★</span>
-                                <span class="text-gray-600 text-sm ml-2">584
-                                    reviews</span>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <p
-                                    class="text-lg font-bold text-yellow-500">$35.00
-                                    <br>
-                                    <span
-                                        class="text-sm font-normal text-gray-500">per
-                                        person</span>
-                                </p>
-                                <a href="#"
-                                    class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition">
-                                    Book Now
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div
-                        class="min-w-[90%] sm:min-w-[48%] lg:min-w-[32%] bg-white rounded-xl shadow-md overflow-hidden mx-2">
-                        <img class="h-48 w-full object-cover"
-                            src="/images/Foumban-palace.jpg"
-                            alt>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg">Foumban
-                                palace</h3>
-                            <!-- Location --
-                            <div
-                                class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon --
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                    class="w-4 h-4 mr-1 text-yellow-500"
-                                    fill="currentColor"
-                                    viewBox="0 0 20 20">
-                                    <path fill-rule="evenodd"
-                                        d="M5.05 3.05a7 7 0 019.9 9.9L10 18.9l-4.95-5.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                West, Foumban
-                            </div>
-                            <div class="flex items-center my-2">
-                                <span class="text-yellow-400">★★★★★</span>
-                                <span class="text-gray-600 text-sm ml-2">584
-                                    reviews</span>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <p
-                                    class="text-lg font-bold text-yellow-500">$35.00
-                                    <br>
-                                    <span
-                                        class="text-sm font-normal text-gray-500">per
-                                        person</span>
-                                </p>
-                                <a href="#"
-                                    class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition">
-                                    Book Now
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div
-                        class="min-w-[90%] sm:min-w-[48%] lg:min-w-[32%] bg-white rounded-xl shadow-md overflow-hidden mx-2">
-                        <img class="h-48 w-full object-cover"
-                            src="/images/Reunification-Monument.jpg"
-                            alt>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg">Reunification
-                                Monument</h3>
-                            <!-- Location --
-                            <div
-                                class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon --
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                    class="w-4 h-4 mr-1 text-yellow-500"
-                                    fill="currentColor"
-                                    viewBox="0 0 20 20">
-                                    <path fill-rule="evenodd"
-                                        d="M5.05 3.05a7 7 0 019.9 9.9L10 18.9l-4.95-5.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                Centre, Square
-                            </div>
-                            <div class="flex items-center my-2">
-                                <span class="text-yellow-400">★★★★★</span>
-                                <span class="text-gray-600 text-sm ml-2">584
-                                    reviews</span>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <p
-                                    class="text-lg font-bold text-yellow-500">$35.00
-                                    <br>
-                                    <span
-                                        class="text-sm font-normal text-gray-500">per
-                                        person</span>
-                                </p>
-                                <a href="#"
-                                    class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition">
-                                    Book Now
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div
-                        class="min-w-[90%] sm:min-w-[48%] lg:min-w-[32%] bg-white rounded-xl shadow-md overflow-hidden mx-2">
-                        <img class="h-48 w-full object-cover"
-                            src="/images/Menchum-falls.jpg"
-                            alt>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg">Menchum-falls</h3>
-                            <!-- Location --
-                            <div
-                                class="flex items-center text-gray-500 text-sm">
-                                <!-- Location Icon --
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                    class="w-4 h-4 mr-1 text-yellow-500"
-                                    fill="currentColor"
-                                    viewBox="0 0 20 20">
-                                    <path fill-rule="evenodd"
-                                        d="M5.05 3.05a7 7 0 019.9 9.9L10 18.9l-4.95-5.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                Northwest, Menchum
-                            </div>
-                            <div class="flex items-center my-2">
-                                <span class="text-yellow-400">★★★★★</span>
-                                <span class="text-gray-600 text-sm ml-2">584
-                                    reviews</span>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <p
-                                    class="text-lg font-bold text-yellow-500">$35.00
-                                    <br>
-                                    <span
-                                        class="text-sm font-normal text-gray-500">per
-                                        person</span>
-                                </p>
-                                <a href="#"
-                                    class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition">
-                                    Book Now
-                                </a>
-                            </div>
-                        </div>
-                    </div> -->
 
                     </div>
 
@@ -522,8 +356,11 @@
                     </div>
                 </div>
             </section>
-            <!-- <script src="/scripts/blaise.js"></script> -->
+            <script src="/scripts/blaise.js"></script>
             <script src="/scripts/utils.js"></script>
-
+            <script src="/scripts/main.js">
+                
+                
+            </script>
         </body>
     </html>
