Refactor scripts inclusion and clean up unused CSS hover classes

--- a/index.html
+++ b/index.html
@@ -356,10 +356,11 @@
                     </div>
                 </div>
             </section>
-            <script src="/scripts/blaise.js"></script>
             <footer id="footer"></footer>
-            <!-- <script src="/scripts/blaise.js"></script> -->
+            <script src="./scripts/chris.js"></script>
+            <script src="/scripts/blaise.js"></script>
             <script src="/scripts/utils.js"></script>
+            <!-- <script src="/scripts/blaise.js"></script> -->
 
         </body>
     </html>
