Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                     class="flex justify-center mt-4 space-x-2"></div>
             </section>
 
-            <section class="mx-10 my-10">
+            <section class>
                 <div
-                    class="flex flex-col md:flex-row items-center bg-teal-600 backdrop-blur-md rounded-2xl shadow-2xl w-full p-6 opacity-0 fade-in-up">
+                    class="flex flex-col md:flex-row items-center bg-[url('/images/trend.png')] backdrop-blur-md shadow-2xl p-6 h-screen bg-cover bg-center fade-in-up">
 
                     <!-- Image Section -->
                     <div
@@ -284,7 +284,7 @@
                             <div
                                 class="absolute inset-0 rounded-full bg-blue-300 -z-10 -translate-x-6 -translate-y-6 float-blob-delayed"></div>
                             <img
-                                src="/images/face.png"
+                                src="/images/Ellipse.png"
                                 alt="Alaska"
                                 class="rounded-full object-cover w-full h-full shadow-xl">
                         </div>
@@ -357,9 +357,9 @@
                 </div>
             </section>
             <footer id="footer"></footer>
-            <script src="./scripts/chris.js"></script>
-            <script src="/scripts/blaise.js"></script>
-            <script src="/scripts/utils.js"></script>
+            <!-- <script src="./scripts/chris.js"></script> -->
+            <script src="./scripts/blaise.js"></script>
+            <script src="./scripts/utils.js"></script>
             <!-- <script src="/scripts/blaise.js"></script> -->
 
         </body>
