Refactor tour-related scripts and update HTML files to improve structure and maintainability

--- a/my trips.html
+++ b/my trips.html
@@ -124,7 +124,7 @@
   <footer id="footer"></footer>
 
   <!-- JavaScript -->
-   <script src="./scripts/chris.js"></script>
+   <script src="./scripts/main.js"></script>
   <script>
     let selectedTrip = null;
     let selectedRating = 0;
