--- a/tour-design.html
+++ b/tour-design.html
@@ -264,6 +264,6 @@
                 <span><i class="fa-solid fa-envelope"></i>thuk@thuktravels.com</span>
              </div>
     </footer>
-    <script src="./scripts/chris.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
