Update HTML structure and clean up unused scripts for better organization

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                         d="M5.05 3.05a7 7 0 019.9 9.9L10 18.9l-4.95-5.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
                                         clip-rule="evenodd" />
                                 </svg>
-                                <span class="text-white">Alaska, USA</span>
+                                <span class="text-white">Far North Region, Cameroon</span>
                             </div>
 
                             <span class="flex items-center md:ml-4">
