--- a/tour design.html
+++ b/tour design.html
@@ -226,7 +226,7 @@
                 
           </ul>
              </div>
-             <div>
+             <div>`
                 <h1 class="font-bold">Company</h1>
                 <ul>
                     <li><a href="">About</a></li>
