added images created funtions to populate y trips page.

--- a/my trips.html
+++ b/my trips.html
@@ -124,7 +124,7 @@
   <footer id="footer"></footer>
 
   <!-- JavaScript -->
-   <script src="./scripts/main.js"></script>
+   
   <script>
     let selectedTrip = null;
     let selectedRating = 0;
@@ -221,5 +221,7 @@
       closeAddModal();
     });
   </script>
+   <script src="./scripts/p.js"></script>
+   <script src="./scripts/persis main.jsmain.js"></script>
 </body>
 </html>
