Refactor tour and destination HTML structure, enhance CSS styles, and implement booking functionality in JavaScript

--- a/tour-design.html
+++ b/tour-design.html
@@ -36,7 +36,7 @@
          <span class="ml-30 font-light">interdum, ac aliquet odio mattis</span>
         </div>
         <section class="grid grid-row-1 md:grid-cols-3 ml-20 mb-10 gap-4">
-            <div class="card gap-0">
+                <div class="card gap-0">
                   <div>
                     <img src="Nirvana Lounge.svg" alt=""  class="rounded-tl-lg rounded-tr-lg">
                   </div>
@@ -49,6 +49,13 @@
                     <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                     <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
                     <span class="ml-2">584 views</span><br>
+                    <div>
+                      <span>
+                        <h2>
+                          
+                        </h2>
+                      </span>
+                    </div>
                         <span class="text-yellow-400">$35.00</span><br>
                         <span>Per person</span>
                        <a href=""> <button class="bg-green-400 w-32  ml-32 h-10 rounded-tr-lg rounded-tl-lg rounded-bl-lg rounded-br-lg">Book now</button></a>
