*Ajusted all pages to load apropriate data and save data where necessary * Renamed js files and deleted ones wich are no longer required *Adapted the the filter functionality to the pages that require filters

--- a/Tour-and-destination.html
+++ b/Tour-and-destination.html
@@ -9,6 +9,7 @@
 
     <body  class="flex flex-col  gap-10 items-cente  min-h-screen ">
         <section class="relative mx-0 min-h-dvh sm: md:h-dvh">
+            <section id="navigation"></section>
             <div class="grid bg-[url('/images/hero.png')] bg-cover bg-center w-full h-3/4">
                 <div class="absolute text-black flex flex-col my-30  justify-center w-full items-center text-center px-4">
                     <h2 class="text-3xl md:text-5xl font-bold">Where Plans <span class="text-blue-600">Take Off</span></h2>
@@ -52,12 +53,7 @@
             <section class="galery flex flex-col gap-5">
                 <h1 class="font-bold text-3xl text-left">Gallery</h1>
                 <div id="gallery" class="grid w-3/4 gap-15 mx-auto  grid-cols-[repeat(auto-fit,minmax(220px,1fr))]">
-                    <img src="./images//sample1.svg" alt="">
-                    <img src="./images//sample1.svg" alt="">
-                    <img src="./images//sample1.svg" alt="">
-                    <img src="./images//sample1.svg" alt="">
-                    <img src="./images//sample1.svg" alt="">
-                    <img src="./images//sample1.svg" alt="">
+                  
                 </div>
             </section>
         </main>
