--- a/my trips.html
+++ b/my trips.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tour Booking - My Trips</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+   <link rel="stylesheet" href="./src/output.css">
 </head>
 <body class="bg-white text-gray-800">
 
@@ -12,14 +13,7 @@
       <!-- Mobile Menu -->
       <button class="md:hidden text-gray-600" onclick="toggleMenu()">☰</button>
     </div>
-    <div id="mobileMenu" class="hidden md:hidden px-6 pb-4 space-y-2">
-      <a href="#" class="block hover:text-blue-600">Home</a>
-      <a href="#" class="block hover:text-blue-600">About Us</a>
-      <a href="#" class="block hover:text-blue-600">Contact Us</a>
-      <button class="w-full mt-2 px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
-        Sign In
-      </button>
-    </div>
+    <div id="navigation"></div>
   </header>
 
   <!-- Hero Section -->
@@ -35,9 +29,9 @@
   <section class="max-w-6xl mx-auto p-6">
     <div class="flex justify-between items-center mb-6">
       <h3 class="text-2xl font-bold">My Trips</h3>
-      <button onclick="openAddModal()" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+      <!-- <button onclick="openAddModal()" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
         + Add New Tour
-      </button>
+      </button> -->
     </div>
 
     <!-- Trip List -->
@@ -221,7 +215,8 @@
       closeAddModal();
     });
   </script>
+    <script src="./scripts/myTrips.js"></script>
+    <script src="./scripts/main.js"></script>
    <script src="./scripts/p.js"></script>
-   <script src="./scripts/persis main.jsmain.js"></script>
 </body>
 </html>
