--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
         <link rel="stylesheet" href="/src/global.css">
     </head>
     <body class="bg-sky-100  min-h-screen">
+
+        <div id="navigation"></div>
         <header
             class="header relative h-screen bg-[url('/images/hero.png')] bg-cover bg-center ">
             <!-- navbar -->
 
             <!-- Hero Content -->
             <div
-                class="absolute inset-0 flex flex-col justify-center items-center text-center text-white px-4">
+                class="absolute inset-0 flex flex-col justify-center items-center text-center text-black px-4">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4">
                     Where Plans <span class="text-green-400">Take Off</span>
                 </h1>
                 <p class="max-w-2xl mb-10">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Nunc vulputate
-                    libero et velit interdum, ac aliquet odio mattis. Class
-                    aptent taciti.
+                    Your next adventure starts here! Whether it’s a weekend getaway
+                     or a bucket-list trip, discover amazing tours,
+                     compare deals, and book with ease — all in one place.
                 </p>
 
                 <div
@@ -37,7 +38,7 @@
 
                     <!-- Form Grid -->
                     <div
-                        class="bg-white grid grid-cols-1 md:grid-cols-5 divide-x divide-gray-200">
+                        class="bg-white grid grid-cols-1 md:grid-cols-4 divide-x divide-gray-200">
 
                         <!-- Origin -->
                         <div class="flex flex-col px-4 py-3">
@@ -45,7 +46,7 @@
                                 class="text-sm font-medium text-gray-700">From</label>
                             <div class="flex items-center text-gray-500 mt-1">
                                 <span class="mr-2">✈️</span>
-                                <input type="text" placeholder="Origin..."
+                                <input type="text" id="from" placeholder="Origin..."
                                     class="focus:outline-none w-full text-sm placeholder-gray-400">
                             </div>
                         </div>
@@ -56,38 +57,27 @@
                                 class="text-sm font-medium text-gray-700">To</label>
                             <div class="flex items-center text-gray-500 mt-1">
                                 <span class="mr-2">🛬</span>
-                                <input type="text" placeholder="Destination..."
+                                <input type="text" id="to" placeholder="Destination..."
                                     class="focus:outline-none w-full text-sm placeholder-gray-400">
-                            </div>
-                        </div>
-
-                        <!-- Departure -->
-                        <div class="flex flex-col px-4 py-3">
-                            <label
-                                class="text-sm font-medium text-gray-700">Departure</label>
-                            <div class="flex items-center text-gray-500 mt-1">
-                                <span class="mr-2">📅</span>
-                                <input type="date"
-                                    class="focus:outline-none w-full text-sm text-gray-500">
                             </div>
                         </div>
 
                         <!-- Passenger -->
                         <div class="flex flex-col px-4 py-3">
                             <label
-                                class="text-sm font-medium text-gray-700">Passenger</label>
+                                class="text-sm font-medium text-gray-700">Search</label>
                             <div class="flex items-center text-gray-500 mt-1">
                                 <span class="mr-2">🧍</span>
-                                <input type="text"
-                                    placeholder="Traveller(s), Class"
-                                    class="focus:outline-none w-full text-sm placeholder-gray-400">
+                                <input type="text" 
+                                    placeholder=" Tour, Location ..."
+                                    class="focus:outline-none w-full text-sm placeholder-gray-400" id="keywords">
                             </div>
                         </div>
 
                         <!-- Search Button -->
                         <div class="flex justify-center items-center">
                             <button
-                                class="w-full h-full bg-teal-600 hover:bg-teal-700 text-white font-semibold text-lg">
+                                class="w-full h-full bg-teal-600 hover:bg-teal-700 text-white font-semibold text-lg" id="sbtn">
                                 Search Flight
                             </button>
                         </div>
@@ -95,6 +85,8 @@
                 </div>
 
             </header>
+
+            <section id="replaceable" class="grid grid-cols-[repeat(auto-fill,minmax(300px,1fr))] gap-5 mx-2 sm:mx-10"></section>
 
             <!-- gallery section -->
             <section class="my-10 mx-8">
@@ -269,7 +261,7 @@
                     class="flex justify-center mt-4 space-x-2"></div>
             </section>
 
-            <section class>
+            
                 <div
                     class="flex flex-col md:flex-row items-center bg-[url('/images/trend.png')] backdrop-blur-md shadow-2xl p-6 h-screen bg-cover bg-center fade-in-up">
 
@@ -355,12 +347,12 @@
                         </div>
                     </div>
                 </div>
+                </section>
             </section>
             <footer id="footer"></footer>
-            <!-- <script src="./scripts/chris.js"></script> -->
-            <script src="./scripts/blaise.js"></script>
+            <script src="./scripts/main.js"></script>
+            <script type="module" src="./scripts/index.js"></script>
             <script src="./scripts/utils.js"></script>
-            <!-- <script src="/scripts/blaise.js"></script> -->
 
         </body>
     </html>
