Worked on the js for my page which is igna.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
         <header
             class="header relative h-screen bg-[url('/images/hero.png')] bg-cover bg-center ">
             <!-- navbar -->
-
+            <nav class="flex items-center justify-between px-6 py-4  top-0 w-full z-50  h-16">
+    <div class="ml-6">
+    <span class="text-3xl">Take-off</span>
+      </div>
+    <div class="flex flex-row justify-between gap-6 mr-20 mt-5">
+    <ul  class="flex flex-row justify-between gap-6 mt-2.5">
+      <li >Home</a></li>
+      <li><a href="">Tour</a></li>
+    <li><a href="">Destination</a></li>
+    </ul>
+        <a class="bg-green-600 hover:bg-green-400   text-center px-6 py-1 ">sign in</a>
+         </div>
+     </nav>
             <!-- Hero Content -->
             <div
                 class="absolute inset-0 flex flex-col justify-center items-center text-center text-white px-4">
