Update links in navigation for Tour and Destination pages

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="flex flex-row justify-between gap-6 mr-20 mt-5">
                     <ul class="flex flex-row justify-between gap-6 mt-2.5">
                         <li>Home</a></li>
-                    <li><a href>Tour</a></li>
-                    <li><a href>Destination</a></li>
+                    <li><a href="tour-design.html">Tour</a></li>
+                    <li><a href="my trips.html">Destination</a></li>
                 </ul>
                 <a
                     class="bg-green-600 hover:bg-green-400   text-center px-6 py-1 ">sign
